# equalizador

./: .gitignore  CMakeLists.txt
.claude/commands/: orquestrador-fix.md  orquestrador-init.md  orquestrador-team.md  orquestrador.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Capture/: AudioCaptureSource.cpp  AudioCaptureSource.h
Source/DSP/: AlienEffect.cpp  AlienEffect.h  ChipmunkEffect.cpp  ChipmunkEffect.h  DemonEffect.cpp  DemonEffect.h  EffectChain.cpp  EffectChain.h  IVoiceEffect.h  MonsterEffect.cpp  MonsterEffect.h  PitchShifter.cpp  PitchShifter.h  RobotEffect.cpp  RobotEffect.h
Source/Hotkeys/: HotkeyEventQueue.h  IHotkeyBackend.h  ModifierTranslation.h  Win32HotkeyBackend.cpp  Win32HotkeyBackend.h
Source/Installer/: VBCableDetector.cpp  VBCableDetector.h
Source/Mixer/: AudioMixer.cpp  AudioMixer.h  SoftLimiter.cpp  SoftLimiter.h
Source/Output/: OutputRouter.cpp  OutputRouter.h
Source/Persistence/: ConfigManager.cpp  ConfigManager.h  ConfigSchema.h
Source/Soundboard/: SoundSlot.h  SoundboardEngine.cpp  SoundboardEngine.h
Source/State/: AppState.h
Source/UI/: BypassIndicator.cpp  BypassIndicator.h  EffectSegmentedControl.cpp  EffectSegmentedControl.h  HotkeyCaptureButton.cpp  HotkeyCaptureButton.h  SoundboardSlotView.cpp  SoundboardSlotView.h
agentes/: ANALISTA.md  ARQUITETO.md  BDD.md  CONTEXTO.md  DESIGNER.md  DEV.md  ORQUESTRADOR.md  PIPELINE.md  PO.md  QA.md  REVISOR.md  SEGURANCA.md  TL.md
agentes/scripts/: detect-projects.sh
tests/: AppStateTests.cpp  AudioMixerTests.cpp  ConfigManagerTests.cpp  EffectChainTests.cpp  HotkeyEventQueueTests.cpp  ModifierTranslationTests.cpp  SoftLimiterTests.cpp  SoundboardEngineTests.cpp  TestMain.cpp  VBCableDetectorTests.cpp
